--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -11,6 +11,9 @@ body {
   
 }
 
+.transparent-dark {
+	background : linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) )
+}
 
 .bg-light-gray {
 	background-color: gray;
