--- a/src/main/webapp/resources/css/navbar.css
+++ b/src/main/webapp/resources/css/navbar.css
@@ -1,14 +1,14 @@
-li {
+.main-navbar li {
 	height:100%;
 	box-sizing: border-box;
 	margin-right: 1rem;
 }
 
 
-li:hover {
+.main-navbar li:hover {
 	background-color: rgb(255,100,100);
 }
 
-li .navbar-link:hover {
+.main-navbar li .navbar-link:hover {
 	color: yellow !important;
 }
