--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -8,7 +8,7 @@ body {
   	-o-background-size: cover;
   	background-size: cover;
   	height:100%
-  
+  	
 }
 
 .transparent-dark {
@@ -22,4 +22,8 @@ body {
 .main-container {
 	background-color: rgb(0,0,0,0.6);
 	color: white;
-} 
+}
+
+.container {
+	box-sizing: border-box;
+}
